--- a/style.scss
+++ b/style.scss
@@ -27,20 +27,19 @@ a {
 .header {
     margin:0;
     padding:0;
-    
-    img {
-        width:100%;
-        height:250px;
-    }
+    background-size:contain;
+    background-repeat:no-repeat;
+    background-position:center center;
+    background-color:#EEEEEE;
+    background-image:url(./image/2085-2086R1.jpg);
+    background-attachment:fixed;
+    height:250px;
 }
 
 @media (min-width: 769px) {
 
     .header {
-        
-        img {
-            height:500px;
-        }
+        height:500px;
     }
 
 }
