--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a {
 .header {
   margin: 0;
   padding: 0;
-  background-size: auto 100%;
+  background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: center top;
   background-color: #EEEEEE;
@@ -23,7 +23,6 @@ a {
   height: 250px; }
 
 @media (min-width: 769px) {
-  gi
   .header {
     height: 500px; } }
 /*contents
