--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a {
 .header {
   margin: 0;
   padding: 0;
-  background-size: 100% auto;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
   background-color: #EEEEEE;
